# spectral-mining

./: .gitignore  NOTES.md  README.md  graclus.py  naive_design.md  naive_rl.py  play_tictac.py  plot_laplacians.py  rl.py  sparseQR.py  spectral.py  test_rl.py  tictac.py  two_room_diffusion.py  two_room_laplacian.py
proposal/: proposal.tex  references.bib
specmine/: __init__.py  discovery.py  domains.py  feature_maps.py  graclus.py  graphviz.py  naive_rl.py  rl.py  science.py  sparse_coding.py  spectral.py  tictac.py  util.py
specmine/experiments/: cluster_ttt.py  eigenvector_test.py  go_affinity_predict.py  go_analyze_evs.py  go_feature_performance.py  go_graph.py  go_kmeans_predict.py  ttt_affinity_act.py  ttt_affinity_predict.py  ttt_analyze_evs.py  ttt_feature_number.py  ttt_test.py  ttt_vs_tabular.py  two_room_features.py
specmine/go/: .gitignore  README_GO  __init__.py  features.py  fuego.pyx  fuego_c.pxd  gnugo_engine.pyx  go.py  go_loops.pyx  install.sh  not_go_loops.py  setup.py
specmine/go/test/: test_fuego.py
specmine/rl/: __init__.py  domains.py  policies.py  q_learning.py  td.py  v_learning.py
specmine/test/: test_discovery.py  test_spectral.py  test_tictac.py
specmine/tools/: __init__.py  cluster_states.py  draw_states.py  draw_ttt_graph.py  run_tests.py  stateviz.py  ttt_server.py  write_go_games.py  write_go_values.py  write_ttt_affinity.py  write_ttt_optimal.py  write_ttt_states.py  write_ttt_values.py
writeups/final/: pavement.py  references.bib  writeup.tex
writeups/first/: .gitignore  pavement.py  presweave.tex  references.bib  writeup.tex  writeup_base.R
writeups/presentation/: CMakeLists.txt  Makefile  presentation.tex  run_bibtex.sh  run_pdflatex.sh  run_xelatex.sh
writeups/presentation/parts/: conclusions.tex  connections.tex  introduction.tex  polarity.tex  portfolio.tex
writeups/proposal/: Makefile  references.bib
(+17 files in other folders)
